Correção do link

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="/style.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <link
 rel="stylesheet"
 href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/fontawesome.
@@ -12,7 +12,7 @@ min.css"
 />
     <title>Detran MS</title>
   </head>
-  <body class="flex-column-center">  
+  <body class="flex-column-center">
 
     <!-- <img class="bg" src="/img/teste.png" alt="Logo do Detran MS"> -->
     <section class="section flex-column-center">
@@ -20,17 +20,17 @@ min.css"
         <div class="logo-container">
           <figure>
             <img class="logo-detranms" src="./img/logo-detranms.png" alt="Logo do Detran MS">
-          </figure>            
+          </figure>
           <p class="text-title">Seja bem-vindo!</p>
             </div>
             <div class="login__container-inside flex-column-center flex-gap ">
-              <form class="flex-column-center flex-gap form">                                                    
+              <form class="flex-column-center flex-gap form">
                 <input
                 class="input"
                 id="login"
                 name="login"
                 type="text"
-                placeholder="Login"  
+                placeholder="Login"
                 required
                 autocomplete="off"
                 pattern="\b\d{3}\.\d{3}\.\d{3}-\d{2}\b|\b(\d{11})\b|\b[a-z]{5}-ldpa[0-9]{1}\b|\b[a-z]{5}\b-[a-z]{6}\b"
